--- a/css/base/_text.scss
+++ b/css/base/_text.scss
@@ -6,7 +6,7 @@ h1 {
   font-size: 125px;
   line-height: 120px;
   background: transparent;
-  z-index: 0;
+  z-index: -1;
 }
 
 h3 {
